--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -3,15 +3,19 @@
     "dev": "nodemon src/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "seeds": "node prisma/seeds.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@prisma/client": "^6.4.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
     "prisma": "^6.4.1"
   }
 }
