--- a/mobile/frontend/app.json
+++ b/mobile/frontend/app.json
@@ -17,6 +17,10 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "extra": {
+      "API_URL": "http://192.168.104.14:4000",
+      "GOOGLE_MAPS_KEY": "your-google-maps-key"
+    },
     "web": {
       "bundler": "metro",
       "output": "static",
