pull from lilia

--- a/mobile/frontend/tsconfig.json
+++ b/mobile/frontend/tsconfig.json
@@ -6,7 +6,7 @@
       "@/*": ["./*"]
     },
     // "types": ["nativewind/types"],
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
