--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -21,7 +21,8 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "prisma": "^6.4.1"
