--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
@@ -45,6 +46,7 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -52,6 +54,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
@@ -59,6 +62,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-inline-dotenv": "^1.7.0",
