--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -19,6 +19,9 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.37",
@@ -41,6 +44,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
@@ -61,7 +65,9 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.13.5",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.20",
