--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "puppeteer": "^24.3.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
