pull from lilia

--- a/mobile/frontend/app.json
+++ b/mobile/frontend/app.json
@@ -47,7 +47,10 @@
     "experiments": {
       "typedRoutes": true
     },
-    "assetBundlePatterns": ["**/*", "assets/fonts/*"],
+    "assetBundlePatterns": [
+      "**/*",
+      "assets/fonts/*"
+    ],
     "fonts": [
       {
         "asset": "assets/fonts/android/inter/Inter_28pt-Light.ttf",
