--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -38,6 +38,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
@@ -47,9 +48,9 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
-    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
