--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -20,6 +20,7 @@
     "fuse.js": "^7.1.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "puppeteer": "^24.3.0",
