--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.7",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
@@ -47,6 +48,7 @@
     "react-native": "0.76.7",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
