--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "canvas": "^3.1.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "face-api.js": "^0.22.2",
     "franc": "^6.2.0",
     "fuse.js": "^7.1.0",
     "google-auth-library": "^9.15.1",
