--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-picker/picker": "^2.11.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -59,6 +59,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
