--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -26,6 +26,7 @@
     "puppeteer": "^24.3.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "react-native-fs": "^2.20.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
