--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-picker/picker": "^2.11.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -54,6 +54,7 @@
     "react-native-country-flag": "^2.0.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
