--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -32,7 +33,9 @@
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.6",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.17",
@@ -57,20 +60,20 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.5.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.0.6"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
