--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -81,6 +81,7 @@
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.34",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/socket.io-client": "^1.4.36",
     "autoprefixer": "^10.4.20",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "jest": "^29.2.1",
