--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stripe/stripe-react-native": "^0.38.6",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.37",
