--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -58,6 +58,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-picker": "^4.3.7",
