--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -71,7 +71,9 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-camera": "~16.0.17",
+    "expo-face-detector": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
