--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -38,7 +38,8 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react-native-fs": "^2.20.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "prisma": "^6.4.1"
