--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -25,13 +25,16 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stripe/stripe-react-native": "^0.42.0",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "expo": "~52.0.37",
     "expo-auth-session": "^6.0.3",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.17",
     "expo-constants": "~17.0.7",
     "expo-document-picker": "^13.0.3",
+    "expo-face-detector": "~13.0.2",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
@@ -79,9 +82,7 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^3.4.17",
-    "expo-camera": "~16.0.17",
-    "expo-face-detector": "~13.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
