pull from talel

--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -48,6 +48,8 @@
     "expo-web-browser": "~14.0.2",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lottie-react-native": "^7.2.2",
     "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.475.0",
@@ -57,8 +59,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-awesome-alerts": "^2.0.0",
+    "react-native-config": "^1.5.5",
     "react-native-country-flag": "^2.0.2",
-    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -84,6 +86,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.5",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
