--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -40,6 +40,7 @@
         "expo-image-picker": "^16.0.6",
         "expo-linear-gradient": "^14.0.2",
         "expo-linking": "~7.0.5",
+        "expo-location": "^18.0.8",
         "expo-random": "^14.0.1",
         "expo-router": "~4.0.17",
         "expo-splash-screen": "~0.29.22",
@@ -61,7 +62,9 @@
         "react-native-dotenv": "^3.4.11",
         "react-native-elements": "^3.4.3",
         "react-native-gesture-handler": "~2.20.2",
+        "react-native-get-random-values": "^1.11.0",
         "react-native-maps": "^1.20.1",
+        "react-native-maps-directions": "^1.9.0",
         "react-native-modal": "^13.0.1",
         "react-native-modal-datetime-picker": "^18.0.0",
         "react-native-pager-view": "6.5.1",
