--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
