--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.37",
     "expo-auth-session": "^6.0.3",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.7",
@@ -70,6 +71,7 @@
     "react-native-pager-view": "6.5.1",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.3.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -103,4 +105,3 @@
   "private": true,
   "type": "module"
 }
-
