--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -61,6 +61,7 @@
         "react-native-country-flag": "^2.0.2",
         "react-native-dotenv": "^3.4.11",
         "react-native-elements": "^3.4.3",
+        "react-native-feather": "^1.1.2",
         "react-native-gesture-handler": "~2.20.2",
         "react-native-get-random-values": "^1.11.0",
         "react-native-maps": "^1.20.1",
@@ -85,6 +86,8 @@
     "devDependencies": {
         "@babel/core": "^7.25.2",
         "@types/jest": "^29.5.12",
+        "@types/jwt-decode": "^2.2.1",
+        "@types/lodash": "^4.17.16",
         "@types/node": "^22.13.5",
         "@types/react": "~18.3.12",
         "@types/react-native": "^0.72.8",
