--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -54,8 +54,8 @@
         "lucide-react-native": "^0.475.0",
         "nativewind": "^4.1.23",
         "npm": "^11.1.0",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "react-native": "0.76.7",
         "react-native-awesome-alerts": "^2.0.0",
         "react-native-country-flag": "^2.0.2",
@@ -104,5 +104,9 @@
         "typescript": "^5.7.3"
     },
     "private": true,
-    "type": "module"
+    "type": "module",
+    "resolutions": {
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    }
 }
