--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -57,12 +57,13 @@
     "npm": "^11.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-barcode-scanner-google": "^1.4.2",
     "react-native-country-flag": "^2.0.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "^1.20.1",
