--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -33,7 +33,7 @@
     "expo-auth-session": "^6.0.3",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
-    "expo-camera": "^16.0.18",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.7",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.4",
