--- a/admin/package.json
+++ b/admin/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/d3-geo": "^3.1.0",
+    "@types/leaflet": "^1.9.16",
+    "@types/topojson-client": "^3.1.5",
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
+    "d3-geo": "^3.1.1",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
