--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.13.5",
     "@types/react": "~18.3.12",
