--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-react-native": "^0.43.0",
     "axios": "^1.8.1",
     "base-64": "^1.0.0",
