--- a/mobile/frontend/app.json
+++ b/mobile/frontend/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "frontend",
+    "permissions": ["camera"],
     "slug": "wassalha",
     "version": "1.0.0",
     "orientation": "portrait",
