--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -79,6 +79,7 @@
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -115,4 +116,3 @@
   "private": true,
   "type": "module"
 }
-
