--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -68,6 +68,7 @@
     "react-native-country-flag": "^2.0.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
@@ -115,4 +116,3 @@
   "private": true,
   "type": "module"
 }
-
