--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -44,7 +44,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.6",
     "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-random": "^14.0.1",
@@ -58,6 +58,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "lucide-react-native": "^0.475.0",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "npm": "^11.1.0",
     "react": "18.3.1",
