--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -54,6 +54,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "framer-motion": "^12.6.3",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
