--- a/mobile/frontend/package.json
+++ b/mobile/frontend/package.json
@@ -103,6 +103,7 @@
     "@types/date-fns": "^2.5.3",
     "@types/expo": "^32.0.13",
     "@types/jest": "^29.5.12",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.13.5",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
