--- a/mobile/frontend/tsconfig.json
+++ b/mobile/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "expo/tsconfig.base", // Ensure this matches your installed Expo version
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "allowJs": true,
     "jsx": "react-native",
@@ -11,12 +11,7 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
-    // Remove "types" unless you need specific overrides; expo/tsconfig.base includes these
-    // "types": ["react", "react-native", "expo"]
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": [
     "**/*.ts",
@@ -24,8 +19,9 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "react-native-dotenv.d.ts",
-    "screens/NotificationB.tsx"
-, "app/pickup/QRCodeScanner.tsx"  ],
+    "screens/NotificationB.tsx",
+    "app/pickup/QRCodeScanner.tsx"
+  ],
   "exclude": [
     "node_modules",
     "babel.config.js",
